--- a/templates/Productos.html
+++ b/templates/Productos.html
@@ -67,7 +67,7 @@
                                     <div class="app_alinear">
                                         <h5>Nombre</h5>
                                     </div>
-                                    <img src="img/Producto1.png" class="img-responsive">
+                                    <img src="{{STATIC_URL}}img/elemento.png" class="img-responsive">
                                     <div class="app_alinear app_centrar">
                                         <h5>S/.20.00 </h5>
                                         <form action="">
@@ -86,7 +86,7 @@
                                     <div class="app_alinear">
                                         <h5>Nombre</h5>
                                     </div>
-                                    <img src="img/Producto1.png" class="img-responsive">
+                                    <img src="{{STATIC_URL}}img/elemento.png" class="img-responsive">
                                     <div class="app_alinear app_centrar">
                                         <h5>S/.20.00 </h5>
                                         <form action="">
@@ -105,7 +105,7 @@
                                     <div class="app_alinear">
                                         <h5>Nombre</h5>
                                     </div>
-                                    <img src="img/Producto1.png" class="img-responsive">
+                                    <img src="{{STATIC_URL}}img/elemento.png" class="img-responsive">
                                     <div class="app_alinear app_centrar">
                                         <h5>S/.20.00 </h5>
                                         <form action="">
@@ -124,85 +124,7 @@
                                     <div class="app_alinear">
                                         <h5>Nombre</h5>
                                     </div>
-                                    <img src="img/Producto1.png" class="img-responsive">
-                                    <div class="app_alinear app_centrar">
-                                        <h5>S/.20.00 </h5>
-                                        <form action="">
-                                            <div class="app-div1">
-                                                <input type="text" name="cantidad" id="cantidad" class="app_cantidad">
-                                            </div>
-                                            <div class="app-div2">
-                                                <input type="submit" name="agregar" id="agregar" value="Agregar" class="app_agregar">
-                                            </div>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                        </div><br>
-                        <div class="row">
-                            <div class="col-xs-3">
-                                <div class="img-thumbnail app_padding">
-                                    <div class="app_alinear">
-                                        <h5>Nombre</h5>
-                                    </div>
-                                    <img src="img/Producto1.png" class="img-responsive">
-                                    <div class="app_alinear app_centrar">
-                                        <h5>S/.20.00 </h5>
-                                        <form action="">
-                                            <div class="app-div1">
-                                                <input type="text" name="cantidad" id="cantidad" class="app_cantidad">
-                                            </div>
-                                            <div class="app-div2">
-                                                <input type="submit" name="agregar" id="agregar" value="Agregar" class="app_agregar">
-                                            </div>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xs-3">
-                                <div class="img-thumbnail app_padding">
-                                    <div class="app_alinear">
-                                        <h5>Nombre</h5>
-                                    </div>
-                                    <img src="img/Producto1.png" class="img-responsive">
-                                    <div class="app_alinear app_centrar">
-                                        <h5>S/.20.00 </h5>
-                                        <form action="">
-                                            <div class="app-div1">
-                                                <input type="text" name="cantidad" id="cantidad" class="app_cantidad">
-                                            </div>
-                                            <div class="app-div2">
-                                                <input type="submit" name="agregar" id="agregar" value="Agregar" class="app_agregar">
-                                            </div>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xs-3">
-                                <div class="img-thumbnail app_padding">
-                                    <div class="app_alinear">
-                                        <h5>Nombre</h5>
-                                    </div>
-                                    <img src="img/Producto1.png" class="img-responsive">
-                                    <div class="app_alinear app_centrar">
-                                        <h5>S/.20.00 </h5>
-                                        <form action="">
-                                            <div class="app-div1">
-                                                <input type="text" name="cantidad" id="cantidad" class="app_cantidad">
-                                            </div>
-                                            <div class="app-div2">
-                                                <input type="submit" name="agregar" id="agregar" value="Agregar" class="app_agregar">
-                                            </div>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xs-3">
-                                <div class="img-thumbnail app_padding">
-                                    <div class="app_alinear">
-                                        <h5>Nombre</h5>
-                                    </div>
-                                    <img src="img/Producto1.png" class="img-responsive">
+                                    <img src="{{STATIC_URL}}img/elemento.png" class="img-responsive">
                                     <div class="app_alinear app_centrar">
                                         <h5>S/.20.00 </h5>
                                         <form action="">
@@ -223,7 +145,7 @@
                                     <div class="app_alinear">
                                         <h5>Nombre</h5>
                                     </div>
-                                    <img src="img/Producto1.png" class="img-responsive">
+                                    <img src="{{STATIC_URL}}img/elemento.png" class="img-responsive">
                                     <div class="app_alinear app_centrar">
                                         <h5>S/.20.00 </h5>
                                         <form action="">
@@ -242,7 +164,7 @@
                                     <div class="app_alinear">
                                         <h5>Nombre</h5>
                                     </div>
-                                    <img src="img/Producto1.png" class="img-responsive">
+                                    <img src="{{STATIC_URL}}img/elemento.png" class="img-responsive">
                                     <div class="app_alinear app_centrar">
                                         <h5>S/.20.00 </h5>
                                         <form action="">
@@ -261,7 +183,7 @@
                                     <div class="app_alinear">
                                         <h5>Nombre</h5>
                                     </div>
-                                    <img src="img/Producto1.png" class="img-responsive">
+                                    <img src="{{STATIC_URL}}img/elemento.png" class="img-responsive">
                                     <div class="app_alinear app_centrar">
                                         <h5>S/.20.00 </h5>
                                         <form action="">
@@ -280,7 +202,85 @@
                                     <div class="app_alinear">
                                         <h5>Nombre</h5>
                                     </div>
-                                    <img src="img/Producto1.png" class="img-responsive">
+                                    <img src="{{STATIC_URL}}img/elemento.png" class="img-responsive">
+                                    <div class="app_alinear app_centrar">
+                                        <h5>S/.20.00 </h5>
+                                        <form action="">
+                                            <div class="app-div1">
+                                                <input type="text" name="cantidad" id="cantidad" class="app_cantidad">
+                                            </div>
+                                            <div class="app-div2">
+                                                <input type="submit" name="agregar" id="agregar" value="Agregar" class="app_agregar">
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div><br>
+                        <div class="row">
+                            <div class="col-xs-3">
+                                <div class="img-thumbnail app_padding">
+                                    <div class="app_alinear">
+                                        <h5>Nombre</h5>
+                                    </div>
+                                    <img src="{{STATIC_URL}}img/elemento.png" class="img-responsive">
+                                    <div class="app_alinear app_centrar">
+                                        <h5>S/.20.00 </h5>
+                                        <form action="">
+                                            <div class="app-div1">
+                                                <input type="text" name="cantidad" id="cantidad" class="app_cantidad">
+                                            </div>
+                                            <div class="app-div2">
+                                                <input type="submit" name="agregar" id="agregar" value="Agregar" class="app_agregar">
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-3">
+                                <div class="img-thumbnail app_padding">
+                                    <div class="app_alinear">
+                                        <h5>Nombre</h5>
+                                    </div>
+                                    <img src="{{STATIC_URL}}img/elemento.png" class="img-responsive">
+                                    <div class="app_alinear app_centrar">
+                                        <h5>S/.20.00 </h5>
+                                        <form action="">
+                                            <div class="app-div1">
+                                                <input type="text" name="cantidad" id="cantidad" class="app_cantidad">
+                                            </div>
+                                            <div class="app-div2">
+                                                <input type="submit" name="agregar" id="agregar" value="Agregar" class="app_agregar">
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-3">
+                                <div class="img-thumbnail app_padding">
+                                    <div class="app_alinear">
+                                        <h5>Nombre</h5>
+                                    </div>
+                                    <img src="{{STATIC_URL}}img/elemento.png" class="img-responsive">
+                                    <div class="app_alinear app_centrar">
+                                        <h5>S/.20.00 </h5>
+                                        <form action="">
+                                            <div class="app-div1">
+                                                <input type="text" name="cantidad" id="cantidad" class="app_cantidad">
+                                            </div>
+                                            <div class="app-div2">
+                                                <input type="submit" name="agregar" id="agregar" value="Agregar" class="app_agregar">
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-3">
+                                <div class="img-thumbnail app_padding">
+                                    <div class="app_alinear">
+                                        <h5>Nombre</h5>
+                                    </div>
+                                    <img src="{{STATIC_URL}}img/elemento.png" class="img-responsive">
                                     <div class="app_alinear app_centrar">
                                         <h5>S/.20.00 </h5>
                                         <form action="">
