--- a/static/css/main.css
+++ b/static/css/main.css
@@ -341,7 +341,127 @@ h5
 
 
 
+/* ================= Modal ================ */
 
+#enlace_modal{
+  cursor: pointer;
+}
+
+#modal{
+  width: 100%;
+  height: 1050px;
+  position: absolute;
+  background-color: rgba(14, 14, 1, 0.75);
+  top: 0;
+  display: none;
+}
+
+#modal_content{
+  background-color: white;
+  position: relative;
+  height: 550px;
+  width: 900px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 50px;
+  -webkit-box-shadow: 0px 0px 48px 19px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 48px 19px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 48px 19px rgba(0,0,0,0.75);
+  border-radius: 4px;
+}
+
+#mcontent_true{
+  margin-top: 20px;
+  top: 20px;
+  width: 860px;
+  height: 510px;
+  position: relative;
+  border: 1px solid rgb(198, 199, 218);
+  border-radius: 4px;
+  padding: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#mcontent_true h3{
+  text-align: center;
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+.table_first,
+.table_second,
+.table_third,
+.table_fourth,
+.table_fifth,
+.table_sixth{
+  padding-right: 10px;
+  padding-left: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  text-align: center;
+}
+
+
+.table_first{
+  width: 40px; 
+}
+
+.table_second{
+  width: 330px;
+}
+
+.table_third{
+  width: 100px;
+}
+
+.table_fourth{
+  width: 150px;
+}
+
+.table_fifth{
+  width: 150px;
+}
+
+.table_sixth{
+  width: 50px;
+}
+
+#table_mcontent th{
+  background-color: #000;
+  color: white;
+}
+
+#table_mcontent tr{
+  border-bottom: 3px solid rgba(161, 165, 182, 0.21);
+}
+
+#table_mcontent tr:first-child{
+  border-bottom: none;
+}
+
+.boton_edit{
+  background-color: rgb(229, 224, 86);
+  border: 1px solid rgb(168, 179, 165);
+  margin-left: 10px;
+  border-radius: 2px;
+  padding: 5px;
+}
+
+#input_edit{
+  width: 50px;
+  height: 30px;
+  border-radius: 2px;
+  border: 1px solid rgb(168, 179, 165);
+  display: none;
+}
+
+.letter_table{
+  width: 40px;
+  padding-left: 10px;
+}
+
+/* ======================================== */
 
 
 
