--- a/static/css/fonts.css
+++ b/static/css/fonts.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('../fonts/icomoon.eot');
-	src:url('../fonts/icomoon.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/icomoon.woff') format('woff'),
-		url('../fonts/icomoon.ttf') format('truetype'),
-		url('../fonts/icomoon.svg#icomoon') format('svg');
+	src:url('../fonts/icomoon.eot?-y7aj6v');
+	src:url('../fonts/icomoon.eot?#iefix-y7aj6v') format('embedded-opentype'),
+		url('../fonts/icomoon.woff?-y7aj6v') format('woff'),
+		url('../fonts/icomoon.ttf?-y7aj6v') format('truetype'),
+		url('../fonts/icomoon.svg?-y7aj6v#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -56,6 +56,12 @@
 .icon-mail:before {
 	content: "\e608";
 }
+.icon-pencil:before {
+	content: "\e610";
+}
+.icon-arrow-right:before {
+	content: "\e611";
+}
 .icon-thumbs-up2:before {
 	content: "\e60b";
 }
@@ -67,6 +73,30 @@
 }
 .icon-twitter3:before {
 	content: "\e60e";
+}
+.icon-trash:before {
+	content: "\e612";
+}
+.icon-user:before {
+	content: "\e613";
+}
+.icon-play:before {
+	content: "\e614";
+}
+.icon-arrow-right2:before {
+	content: "\e615";
+}
+.icon-arrow-right3:before {
+	content: "\e616";
+}
+.icon-arrow-right4:before {
+	content: "\e617";
+}
+.icon-chat:before {
+	content: "\e618";
+}
+.icon-comment:before {
+	content: "\e619";
 }
 .icon-mail2:before {
 	content: "\e60f";
