--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{% block title %}fffff{% endblock %}</title>
+        <title>{% block title %}{% endblock %}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -55,13 +55,13 @@
                     <li id="verde">
                       <div>
                         <div class="linea_nav"></div>
-                        <a href="index.html">La Empresa</a>
+                        <a href="/">La Empresa</a>
                       </div>
                     </li>
                     <li id="granate">
                        <div>
                         <div class="linea_nav"></div>
-                        <a href="utiles_escolares/">Utiles Escolares</a>
+                        <a href="/utiles_escolares/">Utiles Escolares</a>
                        </div>
                     </li>
                     <li id="amarillo">
