--- a/templates/index.html
+++ b/templates/index.html
@@ -28,55 +28,31 @@
                 </div>
             </section>
 
-        <section class="app_lista1">
-            <div class="container">
-                <div class="row app_margen">
-                    <div class="col-xs-3">
-                        <div class="img-thumbnail app_padding">
-                            <div class="app_alinear">
-                                 <h5>Nombre</h5>
+
+
+
+            <section class="app_lista1">
+                <div class="container">
+                    <div class="row app_margen">
+                        {% for i in productos  %}
+                        <div class="col-xs-3">
+                            <div class="img-thumbnail app_padding">
+                                <div class="app_alinear">
+                                    <h5>{{i.nombre}}</h5>
+                                </div>
+                                <img src="{{MEDIA_URL}}{{i.img}}" class="img-responsive">
+                                <div class="app_alinear app_centrar">
+                                    <h5>S/.20.00 </h5>
+                                </div>
+                                <a href="/productos/{{i.id}}">Ver detalle</a>
                             </div>
-                            <img src="{{STATIC_URL}}img/productos.png" class="img-responsive">
-                            <div class="app_alinear app_centrar">
-                                 <h5>S/.20.00 </h5>
-                            </div>
-                        </div>
+                        </div>                       
+                        {% endfor %}
                     </div>
-                    <div class="col-xs-3">
-                        <div class="img-thumbnail app_padding">
-                            <div class="app_alinear">
-                                 <h5>Nombre</h5>
-                            </div>
-                            <img src="{{STATIC_URL}}img/productos.png" class="img-responsive">
-                            <div class="app_alinear app_centrar">
-                                 <h5>S/.20.00 </h5>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-3">
-                        <div class="img-thumbnail app_padding">
-                            <div class="app_alinear">
-                                 <h5>Nombre</h5>
-                            </div>
-                            <img src="{{STATIC_URL}}img/productos.png" class="img-responsive">
-                            <div class="app_alinear app_centrar">
-                                 <h5>S/.20.00 </h5>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-3">
-                        <div class="img-thumbnail app_padding">
-                            <div class="app_alinear">
-                                 <h5>Nombre</h5>
-                            </div>
-                            <img src="{{STATIC_URL}}img/productos.png" class="img-responsive">
-                            <div class="app_alinear app_centrar">
-                                 <h5>S/.20.00 </h5>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                </div>   
             </section>
+
+
 
             <section class="app_envios">
                 <div class="container">
