--- a/static/css/main.css
+++ b/static/css/main.css
@@ -140,8 +140,7 @@ ul
 {
     display: inline-block;
     list-style-type: none;
-    margin: 15px 34px 0px 34px;
-    width: 155px;
+    margin: 10px 40px;
     height: 30px;
     cursor: pointer;
     text-decoration: none;
@@ -158,7 +157,7 @@ ul
 
 .app_ul li a{
     letter-spacing: 2px;
-    font-weight: 600;
+    font-weight: 500;
     cursor: pointer;
     color: white;
     /*color: #cccccc;*/
@@ -167,31 +166,7 @@ ul
 }
 
 /* Efectos de Pestañas de navegacion*/
-#verde:hover .linea_nav{
-    background: #76d03b;
-}
 
-#granate:hover .linea_nav{
-    background: #C0392B;
-}
-
-#amarillo:hover .linea_nav{
-    background: #F1C40F;
-}
-
-#morado:hover .linea_nav{
-    background: #C6A49A;
-}
-
-#agua:hover .linea_nav{
-    background: #59DBD5;
-}
-
-.nav_linea{
-    background: #cccccc;
-    margin-top: 0;
-    height: 3px;
-}
 
 /***********************************/
 /***********************************/
