--- a/templates/Descripcion.html
+++ b/templates/Descripcion.html
@@ -4,12 +4,18 @@
 
         <section class="app_descripcion">
             <div class="container">
-                <div class="row">
-                    <div class="col-xs-8">
+                <div class="row app_margen">
+                    <div class="col-xs-6">
                         <img src="{{STATIC_URL}}img/productos.png" class="img-responsive">
                     </div>
-                    <div class="col-xs-4">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, iure ut odit eligendi eveniet quae distinctio molestias fugit beatae harum ex inventore et aliquid culpa libero dolorem nemo alias nisi.
+                    <div class="col-xs-6">
+                        <span class="app-size1">Cuadernos Standford</span><br>
+                        <span class="app-size2">Stock: 21</span><br>
+                        <span class="app-size3">s/. 7.00</span>
+                        <p class="app-size4">Descripción</p><hr>
+                        <span>Color:Rojo</span><br>
+                        <span>Tipo: Cuadriculado</span><br>
+                        <span>Contenido: 100 hojas</span>
                     </div>
                 </div>
             </div>
