--- a/static/css/main.css
+++ b/static/css/main.css
@@ -437,12 +437,19 @@ h5
 }
 
 /* ======================================== */
-
-
+.app-caja
+{
+  height: 373px;
+}
+.app-centrar
+{
+  padding-left: 150px;
+}
 .app-size1
 {
   font-size: 20px;
   letter-spacing: 2px;
+  text-transform: uppercase;
   font-family: 'Duru Sans', sans-serif;
 }
 .app-size2
@@ -450,12 +457,14 @@ h5
   font-size: 15px;
   color: #555;
   letter-spacing: 2px;
+  text-transform: uppercase;
   font-family: 'Duru Sans', sans-serif;
 }
 .app-size3
 {
   font-size: 30px;
   letter-spacing: 2px;
+  text-transform: uppercase;
   font-family: 'Duru Sans', sans-serif;
   color: #0e7ac4;
 }
@@ -463,7 +472,12 @@ h5
 {
   letter-spacing: 2px;
   font-family: 'Duru Sans', sans-serif;
+  text-transform: uppercase;
   color: #0e7ac4;
+}
+.app-orientar
+{
+  float: right;
 }
 
 
