--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,9 @@
                     <div class="col-xs-2 col-xs-3-sinpadding">
                         <div class="app_carrito">
                             <img src="{{STATIC_URL}}img/Carrito.png">
-                            <span>(0) Carrito</span>
+                            <span>
+                                <a href="/vercarrito">(0) Carrito</a>
+                            </span>
                         </div>
                     </div>
                 </div>
