--- a/templates/utiles_escolares.html
+++ b/templates/utiles_escolares.html
@@ -88,11 +88,14 @@
                         <p>{{k.precio}}</p>
                         <img src="{{MEDIA_URL}}{{k.img}}" alt="">  
                        
+                        {% if producto.stock > 0 %}
+                        {% csrf_token %}
                         <div class="sub_registro">
                             <input type="text" class="cantidad">
+                            <button class="carrito" value="{{producto.id}}">Cjomprar</button>                  
                             
-                            <input type="submit" value="Comprar" class="btn btn-primary btn-xs compra">  
                         </div>
+                        {% endif %} 
                     </div>
 
                     {% endfor %}
@@ -137,6 +140,7 @@
         function inicio()
         {
             $(".sub").on('click', mostrarProductos);
+            $(".carrito").on("click",añadircarrito);
 
                // $(".eliminar").on('click', mostrarProductos);
         }
@@ -172,6 +176,31 @@
             }
           });
         }
+
+
+
+        function añadircarrito()
+        {
+            console.log("dfdfdfd")
+            var cantidad = $(".cantidad").val();
+            var producto_id=$(this).val();
+            
+            console.log(cantidad)
+            console.log(producto_id)
+
+              $.ajax({
+                data:{'producto_id':producto_id,'cantidad':cantidad},
+                type:"post",
+                url:'/ajax_carrito/',
+                success: function (data)
+                {
+                 console.log(data)
+                }
+              });
+            
+        }
+
+
 
         </script>
 
