--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
         <!--Barra de Navegacion - Mayra Reloca XD-->
         <nav class="app_nav">
             <div class="container">
-                <ul class="app_ul app_margen">
+                <ul class="app_ul">
                     <li id="verde">
                       <div>
                         <a href="/">La Empresa</a>
