--- a/templates/base.html
+++ b/templates/base.html
@@ -178,7 +178,16 @@
         </footer>
 
         <script>window.jQuery || document.write('<script src="{{STATIC_URL}}js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+        <script src="{{STATIC_URL}}js/vendor/unslider.min.js"></script>
 
         <script src="{{STATIC_URL}}js/main.js"></script>
+        <script>
+        $(function() {
+            $('.banner').unslider({
+                speed:400,
+                dots:true,
+            });
+        });
+        </script>
     </body>
 </html>
