--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
                                 </div>
                                 <img src="{{MEDIA_URL}}{{i.img}}" class="img-responsive">
                                 <div class="app_alinear color3">
-                                    <span class="app-precio">{{i.precio}} </span>
+                                    <span class="app-precio"><span>S/. </span>{{i.precio}} </span>
                                     <span class="app-detalle"><a href="/productos/{{i.id}}">ver detalle </a></span>
                                 </div>
                             </div>
@@ -111,7 +111,7 @@
                                 </div>
                                 <img src="{{STATIC_URL}}img/productos.png" class="img-responsive">
                                 <div class="app_alinear detalle">
-                                    <span class="app-precio">{{y.precio}}</span>
+                                    <span class="app-precio"><span>S/. </span>{{y.precio}}</span>
                                     <span class="app-detalle"><a href="/productos/{{y.id}}">ver detalle </a></span>
                                 </div>
                             </div>
