--- a/templates/index.html
+++ b/templates/index.html
@@ -8,14 +8,7 @@
                 <div class="container">
                     <div class="row app_margen">
                         <div class="col-xs-8">
-                            <div class="banner">
-                                <ul>
-                                    <li style="background-image:url({{STATIC_URL}}img/slider1.jpg);"></li>
-                                    <li style="background-image:url({{STATIC_URL}}img/slider2.jpg);"></li>
-                                    <li style="background-image:url({{STATIC_URL}}img/slider3.jpg);"></li>
-                                </ul>
-                            </div>
-                            
+                            <img src="{{STATIC_URL}}img/slider.png" class="img-responsive">
                         </div>
                         <div class="col-xs-4">
                             <div>
@@ -34,6 +27,7 @@
                     </div>
                 </div>
             </section>
+            
             <section class="app_lista1">
                 <div class="container">
                     <div class="row app_margen">
