--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,9 @@
                         <div class="col-xs-8">
                             <div class="banner">
                                 <ul>
-                                    <li style="background-image:url({{STATIC_URL}}img/slider1.jpg);"></li>
-                                    <li style="background-image:url({{STATIC_URL}}img/slider2.jpg);"></li>
-                                    <li style="background-image:url({{STATIC_URL}}img/slider3.jpg);"></li>
+                                    <li style="background-image:url({{STATIC_URL}}img/slider1.png);"></li>
+                                    <li style="background-image:url({{STATIC_URL}}img/slider2.png);"></li>
+                                    <li style="background-image:url({{STATIC_URL}}img/slider3.png);"></li>
                                 </ul>
                             </div>
                             
