--- a/templates/base.html
+++ b/templates/base.html
@@ -180,5 +180,10 @@
         <script>window.jQuery || document.write('<script src="{{STATIC_URL}}js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
 
         <script src="{{STATIC_URL}}js/main.js"></script>
+    
+{% block script %}
+    
+{% endblock script %}
+
     </body>
 </html>
