--- a/templates/index.html
+++ b/templates/index.html
@@ -119,7 +119,7 @@
                                 <div class="app_alinear nombre">
                                      <span>{{y.nombre}}</span>
                                 </div>
-                                <img src="{{STATIC_URL}}img/productos.png" class="img-responsive">
+                                <img src="{{MEDIA_URL}}{{y.img}}" class="img-responsive">
                                 <div class="app_alinear detalle">
                                     <span class="app-precio"><span>S/. </span>{{y.precio}}</span>
                                     <span class="app-detalle"><a href="/productos/{{y.id}}">ver detalle </a></span>
