--- a/static/css/utiles.css
+++ b/static/css/utiles.css
@@ -1,29 +1,10 @@
-/* --------- Clases con propiedades comunes -------- */
-
-.navegacion, .prod{
-	display: inline-block;
-	margin: 0px;
-	height: 100%;
-
-}
-
-/* ------------------------------------------------- */
 
 /* ----------------- Bloque de Navegación Vertical ------------------ */
 
-.navegacion{
-	width: 25%;
-	position: absolute;
-}
 
 .navi{
-	height: 100%;
-	width: 80%;
-	margin-right: auto;
-	margin-left: auto;
-	margin-top: 30px;
-	margin-bottom: 20px;
-
+	position: fixed;
+	width: 19.4%;
 }
 
 ul{
@@ -31,7 +12,7 @@ ul{
 }
 
 .list_padre{
-	border: 1px solid rgba(22, 197, 99, 0.65);
+	/*border: 1px solid rgba(22, 197, 99, 0.65);*/
 	border-radius: 3px;
 }
 
@@ -63,8 +44,9 @@ ul{
 .list_hija{
 	background-color: white;
 	display: none;
-	overflow-x:hidden;
-	height:320px;
+	height: 100%;
+	/*overflow-x:hidden;
+	height:320px;*/
 }
 
 .list_hija li{
@@ -78,7 +60,7 @@ ul{
 
 .list_hija li:hover{
 	background-color: rgb(238, 241, 243);
-	border-left: 8px solid rgba(4, 24, 14, 0.33);
+	border-left: 3px solid rgba(4, 24, 14, 0.33);
 }
 
 .sh{
@@ -136,9 +118,8 @@ ul{
 
 /* ------------------------------------------------------------------ */
 
-.col-xs-9{
-	overflow-x:hidden;height:680px;
-}
+
+
 
 
 
